# SMP

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EXPLORATION_INDEX.md  FINAL_SUMMARY.md  FULL_TEST_REPORT.md  FULL_TEST_RESULTS.json  IMPLEMENTATION_SUMMARY.md  INTERNAL_DOCS.md  LICENSE  MCP_EDGE_CASE_REPORT.md  MCP_EVALS.md  MCP_EVALUATION_REPORT.md  MCP_EVAL_REPORT.md  MCP_SCENARIO_RESULTS.md  MCP_SERVER.md  MCP_TOOLS_REFERENCE.md  MCP_TOOLS_TEST_RESULTS.md  MCP_TOOL_GUIDE.md  PARSER_USAGE_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.md  README.md  README_MCP_EVALUATION.md  SPEC.md  SPECIFICATION.md  TEST_LOG.md  USER_GUIDE.md  check_edges.py  check_edges2.py  check_edges_db.py  check_impact.py  debug_impact.py  debug_parser.py  debug_rust_ast.py  diagnose_rust_ingest.py  (+36 more)
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
benchmarks/: __init__.py  benchmark_scale.py
e2e_test_samples/: Example.cs  Example.java  Example.kt  example.c  example.cpp  example.go  example.js  example.m  example.php  example.py  example.rb  example.rs  example.swift  example.ts
mcp_eval_project/: LegacyIntegration.java  api.py  core.rs
smp/: __init__.py  agent.py  cli.py  client.py  logging.py  mcp_server.py  tools_cli.py
smp/core/: __init__.py  background.py  config.py  merkle.py  models.py
smp/demo/: analytics.py  app_api.py  auth.py  core_db.py  home.py  test_syntax_error.py  user_logic.py
smp/engine/: linker.py  (+15 more)
src/: client.ts  index.ts  types.ts
test/: api-calls.test.ts  parser.test.ts  protocol-handler.test.ts
test_realworld/: Integration.java  client.ts  core.rs  services.py
tests/: conftest.py  practical_verification.py  test_client.py  test_enricher.py  test_git_provider.py  test_integration_community.py  test_integration_merkle.py  test_integration_parser_graph.py  test_integration_protocol_handlers.py  test_integration_query_engine.py  test_integration_safety.py  test_integration_sandbox.py  test_integration_vector_store.py  test_mcp_tools.py  test_models.py  test_multi_agent_safety.py  test_observability.py  test_parser.py  test_protocol.py  test_protocol_full_verification.py  test_query.py  test_sandbox_runtime.py  test_security.py  test_store.py  test_update.py
vibecoder/: cli.py  config.py  context.py  repl.py  repl_async.py  server.py
(+236 files in other folders)
