[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecoder"
version = "0.1.0"
description = "VibeCoder: a state-of-the-art AI CLI coding agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "VibeCoder Team" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "prompt_toolkit>=3.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "networkx>=3.0",
  "chromadb>=0.5.0",
  "tree-sitter>=0.22.0",
  "tree-sitter-python>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "google-genai>=0.3.0",
  "gitpython>=3.1.0",
  "tenacity>=8.2.0",
  "docker>=7.1.0",
  "playwright>=1.49.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
vibe = "vibecoder.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vibecoder*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
